feat: update profile yml and dbt_project yml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 dbt-core = "^1.7.10"
+dbt-bigquery = "^1.7.6"
 
 
 [build-system]
